test/Fail/UninstantiatedDotPattern.err
UninstantiatedDotPattern.agda:5.4-5: error: [UnequalTerms]
The terms
  X
and
  x
are not equal at type Set
when checking that the given dot pattern X matches the inferred
value x
